# MPHF-Experiments

./: CMakeLists.txt  README.md
contenders/bucketplacement/: ChdContender.h  FchCmphContender.h  FchContender.h  GpuPhobicContender.h  PTHashContender.h  PartitionedPTHashContender.h  PhobicContender.h  RustPhastContender.cpp  RustPhastContender.h  RustPtrHashContender.cpp  RustPtrHashContender.h
contenders/consensus/: ConsensusContender.h
contenders/fingerprinting/: BBHashContender.h  FiPSContender.h  RustFmphContender.h  RustFmphGoContender.h
contenders/recsplit/: GpuRecSplitContender.h  RecSplitContender.h  RecSplitRotateContender.h  SIMDRecSplitContender.h
contenders/retrievalbased/: BdzContender.h  BmzContender.h  ChmContender.h  MphfWbpmContender.h  SicHashContender.h
contenders/shockhash/: BipartiteShockHashContender.h  BipartiteShockHashFlatContender.h  MorphisHashContender.h  MorphisHashFlatContender.h  ShockHashContender.h  ShockHashSimdContender.h
lib/: Contender.cpp  Contender.h  RustContender.cpp  RustContender.h
rust/: Cargo.toml
rust/src/: fmph_contender.rs  fmph_go_contender.rs  lib.rs  phast_contender.rs  phast_plus_contender.rs  phast_plus_wrapped_contender.rs  ptr_hash_contender.rs  ptr_hash_contender_gx.rs
scripts/: result_avg.py
scripts/dockerVolume/: _competitorNames.txt
scripts/phast/: MT50M.tex  MT50Mprev.tex  ST50M.tex  ST50Mprev.tex  (+3 more)
src/: comparison.cpp  comparisonCuda.cu  scalingThesisLehmann.cpp  tableMorphisHash.cpp  tablePHast.cpp  tablePhobic.cpp  tablePtrHash.cpp  tableShockHash.cpp  tableThesisLehmann.cpp
