[package]
name = "mphf_experiments"
version = "0.1.0"
edition = "2021"

[lib]
name = "mphf_experiments"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
ph = { version = "0.9", features = ["gxhash"], path="/home/qwak/prog/bsuccinct-rs/ph" } #
seedable_hash = { version = "0.2", features = ["gxhash"], path="/home/qwak/prog/bsuccinct-rs/seedable_hash" } #
mem_dbg = "0.3"
ptr_hash = "1.1"
gxhash = "3.5"
cacheline-ef = "1.1"
rayon = "1.7.0"
#rand = "*"

[profile.release]
#lto = true
#lto = "fat"
#lto = "thin"
codegen-units = 1